--- a/admin.html
+++ b/admin.html
@@ -404,10 +404,10 @@
 
             <div class="default-info">
                 <p style="margin-bottom: 8px;">
-                    <strong>📝 Thông tin đăng nhập mặc định:</strong>
+                    <strong>📝 liên hệ 0394304799 để lấy pass</strong>
                 </p>
                 <p>
-                    Username: <strong>admin</strong> | Password: <strong>admin123</strong>
+                    <!-- Username: <strong>admin</strong> | Password: <strong>admin123</strong> -->
                 </p>
             </div>
         </div>
