--- a/index.html
+++ b/index.html
@@ -530,6 +530,42 @@
                 height: 180px;
             }
         }
+        /* Nút Admin ẩn ở góc dưới phải */
+.admin-button {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    width: 60px;
+    height: 60px;
+    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 28px;
+    text-decoration: none;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+    transition: all 0.3s ease;
+    z-index: 999;
+    opacity: 0.3;
+}
+
+.admin-button:hover {
+    opacity: 1;
+    transform: scale(1.1) rotate(10deg);
+    box-shadow: 0 6px 25px rgba(102, 126, 234, 0.5);
+}
+
+/* Mobile */
+@media (max-width: 768px) {
+    .admin-button {
+        width: 50px;
+        height: 50px;
+        bottom: 20px;
+        right: 20px;
+        font-size: 24px;
+    }
+}
     </style>
 </head>
 <!--Start of Tawk.to Script-->
@@ -919,5 +955,9 @@ async function copyPhoneNumber() {
         }
         
     </script>
+    <!-- Nút Admin ẩn -->
+<a href="admin.html" class="admin-button" title="Đăng nhập Admin">
+    🔐
+</a>
 </body>
 </html>
